# SocketSys

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  main.yml
include/socketsys/: address.hpp  config.hpp  exception.hpp  platform.hpp  provider.hpp  socket.hpp  socketsys.hpp
include/socketsys/address/: address.hpp  address_resolver.hpp  ipv4.hpp  ipv6.hpp
include/socketsys/error/: exception.hpp
include/socketsys/internal/: windows.hpp
include/socketsys/os/tcp/: winsock_tcp.hpp
include/socketsys/tcp/: settings.hpp  socket.hpp
src/: ipv4.cpp  ipv6.cpp  lib.cpp  test.hpp  windows.cpp
src/linux/: client.cpp  server.cpp
src/unix/: client.cpp  server.cpp
src/windows/: client.cpp  server.cpp  socket.cpp
tests/: CMakeLists.txt  address.cpp  main.cpp  server.cpp  socket.cpp  tests.cpp
windows/: address_resolver.cpp  winsock.hpp
